syntax = "proto3";

option go_package = "tiny-tiktok/api_router/internal/proto/pb;proto";

package proto;

//protoc -I internal/proto/pb --go_out=./internal/proto --go_opt=paths=source_relative --go-grpc_out=./internal/proto --go-grpc_opt=paths=source_relative ./internal/proto/pb/*.proto

message UserRequest {
    //@gotag json:"username" form:"username" uri:"username"
    string Username = 1;
    //@gotag json:"password" form:"password" uri:"password"
    string Password = 2;
}

message UserResponse {
    //@gotag json:"status_code" form:"status_code" uri:"status_code"
    int64 StatusCode = 1;
    //@gotag json:"status_msg" form:"status_msg" uri:"status_msg"
    string StatusMsg = 2;
    //@gotag json:"user_id" form:"user_id" uri:"user_id"
    int64 UserId = 3;
}

message User {
    //@gotag json:"id" form:"id" uri:"id"
    int64 Id = 1;
    //@gotag json:"name" form:"name" uri:"name"
    string Name = 2;
    //@gotag json:"avatar" form:"avatar" uri:"avatar"
    string Avatar = 3;
    //@gotag json:"background_image" form:"background_image" uri:"background_image"
    string BackgroundImage = 4;
    //@gotag json:"signature" form:"signature" uri:"signature"
    string Signature = 5;
}

message UserInfoRequest {
    //@gotag json:"user_id" form:"user_id" uri:"user_id"
    repeated int64 UserIds = 1;
}

message UserInfoResponse {
    //@gotag json:"status_code" form:"status_code" uri:"status_code"
    int64 StatusCode = 1;
    //@gotag json:"status_msg" form:"status_msg" uri:"status_msg"
    string StatusMsg = 2;
    //@gotag json:"users" form:"users" uri:"users"
    repeated User Users = 3;
}

service UserService {
    rpc UserRegister(UserRequest) returns (UserResponse) {}
    rpc UserLogin(UserRequest) returns (UserResponse) {}
    rpc UserInfo(UserInfoRequest) returns (UserInfoResponse) {}
}